SERVER-8507 replSetSyncFrom should fail gracefully when no replica set is active